objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <description>Represents an agreement in the system</description>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__LineItem_Approval_Status__c</fullName>
        <description>The overall approval status for line items associated with the agreement</description>
        <inlineHelpText>The overall approval status for line items associated with the agreement</inlineHelpText>
        <label>Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Term_Exception_Approval_Status__c</fullName>
        <description>This field denotes the overall approval status for agreement term exceptions associated with the agreement.</description>
        <inlineHelpText>This field denotes the overall approval status for agreement term exceptions associated with the agreement.</inlineHelpText>
        <label>Term Exception Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ABOType__c</fullName>
        <description>The asset based order type</description>
        <inlineHelpText>The asset based order type</inlineHelpText>
        <label>ABO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoActivateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the order associated with the agreement will be automatically activated when the agreement is executed.</description>
        <inlineHelpText>Indicates whether the order associated with the agreement will be automatically activated when the agreement is executed.</inlineHelpText>
        <label>Auto Activate Order ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoCreateBill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether billing schedules would be created for the order associated with the agreement when the agreement is executed.</description>
        <inlineHelpText>Indicates whether billing schedules would be created for the order associated with the agreement when the agreement is executed.</inlineHelpText>
        <label>Auto Create Bill ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoCreateRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether revenue schedules would be created for the order associated with the agreement when the agreement is executed.</description>
        <inlineHelpText>Indicates whether revenue schedules would be created for the order associated with the agreement when the agreement is executed.</inlineHelpText>
        <label>Auto Create Revenue ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account associated with the agreement</description>
        <inlineHelpText>ID of the bill to account associated with the agreement</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Bill To)</relationshipLabel>
        <relationshipName>AgreementsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ConfigurationEffectiveDate__c</fullName>
        <description>The configuration effective date</description>
        <inlineHelpText>The configuration effective date</inlineHelpText>
        <label>Configuration Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ConfigurationFinalizedDate__c</fullName>
        <description>Date when the configuration was finalized for the agreement</description>
        <label>Configuration Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ConfigurationSyncDate__c</fullName>
        <description>Date when the configuration was synchronized for the agreement</description>
        <inlineHelpText>Date when the configuration was synchronized for the agreement</inlineHelpText>
        <label>Configuration Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ConfigureNG__c</fullName>
        <formula>IF ( LEN( Apttus_CMConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=NGDefault&quot;, IMAGE(&quot;/resource/Apttus_CMConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products (NG)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Configure__c</fullName>
        <description>Configure products for the agreement</description>
        <formula>IF ( LEN( Apttus_CMConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementConfiguration?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_CMConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__DisableCartVersioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether cart versioning is disabled for the agreement</description>
        <inlineHelpText>Indicates whether cart versioning is disabled for the agreement</inlineHelpText>
        <label>Disable Cart Versioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentivePeriodEndDate__c</fullName>
        <description>The period end date of the current window for incentive processing. The window is determined by the payout calculation frequency of the associated incentives.</description>
        <inlineHelpText>The period end date of the current window for incentive processing. The window is determined by the payout calculation frequency of the associated incentives.</inlineHelpText>
        <label>Incentive Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentivePeriodStartDate__c</fullName>
        <description>The period start date of the current window for incentive processing. The window is determined by the payout calculation frequency of the associated incentives.</description>
        <inlineHelpText>The period start date of the current window for incentive processing. The window is determined by the payout calculation frequency of the associated incentives.</inlineHelpText>
        <label>Incentive Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentivePeriodStatus__c</fullName>
        <description>The status of the incentive processing window</description>
        <inlineHelpText>The status of the incentive processing window</inlineHelpText>
        <label>Incentive Period Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Intent__c</fullName>
        <description>The intent associated with the agreement</description>
        <inlineHelpText>The intent associated with the agreement</inlineHelpText>
        <label>Intent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Price Agreement</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsAutoActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the agreement was activated by an auto system operation</description>
        <inlineHelpText>Indicates whether the agreement was activated by an auto system operation</inlineHelpText>
        <label>Is Auto Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsSystemGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a system generated agreement</description>
        <inlineHelpText>Indicates whether this is a system generated agreement</inlineHelpText>
        <label>Is System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsTaskPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are any tasks pending for the agreement</description>
        <inlineHelpText>Indicates whether there are any tasks pending for the agreement</inlineHelpText>
        <label>Is Task Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LegalEntityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the legal entity associated with the agreement. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</description>
        <inlineHelpText>ID of the legal entity associated with the agreement. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PODate__c</fullName>
        <description>The purchase order date</description>
        <inlineHelpText>The purchase order date</inlineHelpText>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PONumber__c</fullName>
        <description>The purchase order number</description>
        <inlineHelpText>The purchase order number</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PartnerAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the partner account who created the agreement on behalf of a customer</description>
        <inlineHelpText>ID of the partner account who created the agreement on behalf of a customer</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Partner)</relationshipLabel>
        <relationshipName>AgreementsPartner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the agreement</description>
        <inlineHelpText>ID of the payment term associated with the agreement</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PayoutFrequency__c</fullName>
        <description>The incentive payout frequency</description>
        <inlineHelpText>The incentive payout frequency</inlineHelpText>
        <label>Payout Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PricingDate__c</fullName>
        <description>The pricing date. The product list price is determined based on this date.</description>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PurchaseId__c</fullName>
        <description>The default purchase identifier associated with the agreement</description>
        <externalId>true</externalId>
        <inlineHelpText>The default purchase identifier associated with the agreement</inlineHelpText>
        <label>Purchase Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__QTCProfile__c</fullName>
        <description>The QTC profile associated with the agreement</description>
        <inlineHelpText>“Regular” will process the agreement as a single entity. Select “Split” before clicking on Configure Products to allow the subdivision of the agreement into multiple smaller agreements for business/volume related reasons or multiple sold to accounts.</inlineHelpText>
        <label>QTC Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForActivationDate__c</fullName>
        <description>The date the order is ready for activation. The order is activated on this date.</description>
        <inlineHelpText>The date the order is ready for activation. The order is activated on this date.</inlineHelpText>
        <label>Ready For Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForBillingDate__c</fullName>
        <description>The date when the order is ready for billing. The billing schedules are created on this date.</description>
        <inlineHelpText>The date when the order is ready for billing. The billing schedules are created on this date.</inlineHelpText>
        <label>Ready For Billing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForFulfillmentDate__c</fullName>
        <description>The date the order is ready for fulfillment. The order is fulfilled on this date.</description>
        <inlineHelpText>The date the order is ready for fulfillment. The order is fulfilled on this date.</inlineHelpText>
        <label>Ready For Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ReadyForRevRecDate__c</fullName>
        <description>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</description>
        <inlineHelpText>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
        <label>Ready For Revenue Recognition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account associated with the agreement</description>
        <inlineHelpText>ID of the ship to account associated with the agreement</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Ship To)</relationshipLabel>
        <relationshipName>AgreementsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SourceChannel__c</fullName>
        <description>The quote channel. Indicates the primary Sales Channel for the Agreement.</description>
        <inlineHelpText>The quote source channel. Indicates the primary Sales Channel for the Agreement.</inlineHelpText>
        <label>Source Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SyncAssetChangesToAgreement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether asset changes are synchronized to open agreements</description>
        <inlineHelpText>Indicates whether asset changes are synchronized to open agreements</inlineHelpText>
        <label>Sync Asset Changes To Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SyncWithOpportunity__c</fullName>
        <description>Synchronize the agreement with the associated opportunity</description>
        <formula>IF ( LEN(Apttus__Related_Opportunity__c ) &gt; 0, HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementSyncWithOpportunity?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_CMConfig__Button_SynchronizeWithOpportunity&quot;, &quot;Sync with Opportunity&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synchronize with Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__UseType__c</fullName>
        <description>The type associated with the split agreement</description>
        <inlineHelpText>The type associated with the split agreement</inlineHelpText>
        <label>UseType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                    <default>true</default>
                    <label>Main</label>
                </value>
                <value>
                    <fullName>Config</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMDSign__CheckESignatureStatus__c</fullName>
        <description>Check eSignature Status</description>
        <formula>IF(
	AND(
		ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;),
		ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;),
		NOT(ISNULL(Apttus_CMDSign__DocuSignEnvelopeId__c)),
		NOT(ISBLANK(Apttus_CMDSign__DocuSignEnvelopeId__c))
        ),
        HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignEnvStatusByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__CheckStatus&quot;,&quot;Check eSignature Status&quot;), &quot;_self&quot;),
	NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check eSignature Status</inlineHelpText>
        <label>Check eSignature Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMDSign__DocuSignEnvelopeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Apttus - DocuSign envelope Id to which this agreement is associated to.</description>
        <inlineHelpText>The Apttus - DocuSign envelope Id to which this agreement is associated to.</inlineHelpText>
        <label>DocuSign Envelope Id</label>
        <referenceTo>Apttus_DocuApi__DocuSignEnvelope__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMDSign__RecallESignatureRequest__c</fullName>
        <description>Recall E-Signature request</description>
        <formula>IF(
	AND(
           ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
           ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;) 
	   ),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignRecallEnvByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__RecallEnvelope&quot;,&quot;Recall E-Signature Document&quot;), &quot;_self&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recall E-Signature request</inlineHelpText>
        <label>Recall E-Signature Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMDSign__SendForESignature__c</fullName>
        <formula>IF(
  OR(
    ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), 
    (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
         ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;)
        )
     ), 
     (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
          ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;)
         )
      )
    ),
  HYPERLINK(&quot;/apex/Apttus_CMDSign__CMDocuSignCreateEnvelope?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__eSignature&quot;,&quot;Send For eSignatures&quot;), &quot;_self&quot;), 
  NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send For eSignature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMDSign__ViewESignatureDocument__c</fullName>
        <description>Correct E-Signature document</description>
        <formula>IF(
	AND(
           ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
           ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;) 
	),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignViewExistingEnvelope?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__ViewEnvelope&quot;,&quot;Correct E-Signature Document&quot;), &quot;_blank&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Correct E-Signature document</inlineHelpText>
        <label>Correct E-Signature Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPComply__RelatedProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <label>Related Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Account_Search_Field__c</fullName>
        <description>This field is used in the side bar search</description>
        <externalId>true</externalId>
        <label>Account Search Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The link to the account record to identify the external party to this agreement</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N50000001Xl0UEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Activated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who activated the agreement in the system</description>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APTS_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Activated_Date__c</fullName>
        <description>The date the agreement was activated in the system</description>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Category__c</fullName>
        <description>Used to categorize agreement types.  When setting up a new agreement type make sure to seect approrpiate values for that agreement type and to set the right default</description>
        <label>Agreement Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Number__c</fullName>
        <description>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <label>Agreement Number_Num (INTERNAL)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowableOutputFormats__c</fullName>
        <description>The list of output formats allowed for the agreement.</description>
        <inlineHelpText>The list of output formats allowed for the agreement.</inlineHelpText>
        <label>Allowable Output Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>DOCX</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>RTF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Amendment_Effective_Date__c</fullName>
        <description>The date this amendment is effective</description>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renew_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether consent is required to extend / renew this agreement</description>
        <label>Renewal Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renew_Term_Months__c</fullName>
        <description>The number of months to extend the agreement</description>
        <label>Renewal Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renewal_Terms__c</fullName>
        <description>Specifies any terms for renewal</description>
        <label>Renewal Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the agreement has an auto renewal provision</description>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Corporate Business Hours associated with the agreement</description>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to contact record to identify internal signatory</description>
        <label>Company Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001Xl0CEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_Date__c</fullName>
        <description>Date when internal signatory signed</description>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_Title__c</fullName>
        <description>Title of person signing on behalf of Company</description>
        <label>Company Signed Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>